--- a/css/investisement.css
+++ b/css/investisement.css
@@ -20,6 +20,7 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
+    z-index: 10;
     
 }
 header .logo{
@@ -55,6 +56,27 @@ header button{
 .nav :last-child a{
     display: none;
 }
+/* end nav  */
+/* section home */
+.home{
+    position: relative;
+    top: 0;
+    z-index: 0;
+    background-image:url("../images/investPic.png") ;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.home h1{
+    color: #f5f5f5;
+    font-size: 47px;
+    font-weight: 600;
+}
+/* end home */
 @media (max-width:600px){
     header{
         padding: 0 10px;
@@ -95,5 +117,10 @@ header button{
     .nav :last-child a{
         display: block;
     }
+    .home{
+        height: 230px;
+    }
+    .home h1{
+        font-size: 35px;
+    }
 }
-/* end nav  */
