--- a/css/investisement.css
+++ b/css/investisement.css
@@ -76,6 +76,77 @@ header button{
     font-size: 47px;
     font-weight: 600;
 }
+.project{
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-content: center;
+   border: 1px solid red;
+}
+.description{
+    padding: 20px 0;
+    text-align: center;
+}
+.description h2{
+    font-size: 36px;
+}
+.description hr{
+    margin: 10px auto;
+    width: 40%;
+    border:1px solid #D6B031;
+}
+.description p{
+    text-align: center;
+}
+.projects{
+    display: grid;
+    grid-template-columns: repeat(3,auto);
+    grid-template-rows: repeat(3,auto);
+    gap: 50px;
+    background-color: #EDF0FA;
+    margin: 10px 40px;
+    border-radius: 18px;
+    justify-content: center;
+    padding: 20px 0;
+}
+/* .cards{
+    margin: 10px ;
+} */
+.card{
+    background-color: #f5f5f5;
+    width: 400px;
+    border-radius: 18px;
+    height: 520px;
+}
+.card img{
+    width: 402px;
+}
+.card h3{
+    text-align: center;
+    font-size: 25px;
+}
+.card p{
+    max-width: 400px;
+    text-align: justify;
+    margin: 10px;
+}
+.card div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 10px 10px;
+}
+.card div .date{
+    color: #0095D9;
+    font-weight: 700;
+}
+.card div .invest{
+    background-color: #0095D9;
+    padding: 10px 20px;
+    color: #f5f5f5;
+    border: none;
+    font-weight: 700;
+}
 /* end home */
 @media (max-width:600px){
     header{
@@ -122,5 +193,40 @@ header button{
     }
     .home h1{
         font-size: 35px;
+    }
+    .description h2{
+        font-size: 23px;
+    }
+    .description hr{
+        width: 50%;
+    }
+    .projects{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(6,auto);
+        justify-items: center;
+        padding: 10px 30px;
+        margin: 0 10px;
+    }
+    .card img , .card{
+        width: 350px;
+    }
+    .description p{
+        font-size: 14px;
+    }
+}
+@media (max-width:400px){
+    .card img , .card{
+        width: 290px;
+    }
+}
+/* tablet media query */
+@media (min-width:600px) and (max-width:1400px){
+    .projects{
+        grid-template-columns: repeat(2,auto);
+        grid-template-rows: repeat(2,auto);
+    } 
+    .card img , .card{
+        width: 300px;
     }
 }
