--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,272 @@
     scroll-behavior: smooth;
     text-decoration: none;
     list-style: none;
+	font-family: 'Work Sans', sans-serif;
+	list-style: none;
+	scroll-behavior: smooth;
 }
-/* start nav */
+:root{
+	--bg-color : #EDF0FA; 
+	--text-color: #221314;
+	--second-color: #D6B031;
+	--titre-color: #2D3742;
+    --btn-color : #0095D9; 
+	--big-font: 6rem;
+	--h2-font: 2rem;
+    --h4-font: 1.5rem;
+	--p-font: 1rem;
+}
+body{
+	background: var(--bg-color);
+	color: var(--text-color);
+  
+}
+
+h2{
+    font-size: var(--h2-font);
+	line-height: 1.2;
+    margin: 1rem 0rem; 
+    color : var(--titre-color);
+   
+}
+h4{
+    font-size: var(--h4-font);
+	font-weight: 600;
+	margin-bottom: 8px;
+
+   
+}
+p{
+    text-align: justify;
+    margin: 2rem 0rem; 
+}
+.container{
+	padding: 80px 10%;
+    margin: 20px;
+    background-color:#f5f5f5; 
+    justify-content: center;
+    text-align: center;
+}
+.row-items{
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(150px, auto));
+	grid-gap: 2rem;
+	align-items: center;
+	text-align: center;
+	/*margin-top: 5rem;*/
+}
+
+/*.container-img img{
+	height: 85px;
+	width: 85px;
+	padding: 15px;
+	box-shadow: 5px 10px 30px rgba(116, 116, 116, 0.2);
+	margin-bottom: 15px;
+}
+*/
+.container-img .img-paragraphe{
+    width: 100%;
+    height: 100%;
+    box-shadow: 5px 10px 30px rgba(116, 116, 116, 0.2);
+	margin-bottom: 5px;
+    text-align: center;
+}
+
+.container-box{
+    display: flex;
+    flex-direction: column;
+    gap: 10px ; 
+    text-align: center; 
+    margin: 10px 0px;
+}
+
+.btn1 {
+display: inline-block;
+font-size: 1rem;
+padding: 5px  40px;
+background: var(--btn-color);
+color: var(--bg-color);
+border-radius: 4px;
+transition: ease .40s; 
+
+}
+
+.btn2 {
+   display: inline-block;
+    font-size: 1rem;
+    padding: 10px  40px;
+    color: var(--btn-color);
+    border: 2px solid #32a1ce;
+    transition: ease .40s; 
+    margin: 10px 0;
+ }
+    
+.btn3 {
+    display: inline-block;
+    font-size: 1rem;
+    font-weight: 800;
+    padding: 10px  40px;
+    color: var(--text-color);
+    border: 2px solid #C1A20B;
+    transition: ease .40s; 
+
+}
+
+
+@media (max-width: 575px){
+
+	:root{
+	  --h2-font:24px;
+	  transition: .2s;
+	}
+    h2{
+        font-size:24px ;
+    }
+    h4{
+        font-size:20px ;
+    }
+  
+	.home{
+		height: 85vh;
+		transition: .2s;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/************************************* start nav ******************************************/
 a{
     color: #f5f5f5;
 }
@@ -96,4 +360,4 @@ header button{
         display: block;
     }
 }
-/* end nav  */
+/************************************* start nav ******************************************/
