--- a/css/Pret.css
+++ b/css/Pret.css
@@ -56,11 +56,204 @@ header button{
 .nav :last-child a{
     display: none;
 }
+
+/* end nav  */
+.home-pret{
+    position: relative;
+	width:100%;
+	height: 80vh;
+    background: url(../images/pret-entete.png);
+	background-size:cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    display: grid;
+	grid-template-columns: repeat(1, 1fr);
+	align-items: center;
+    
+}
+
+.home-text h1{
+	color:#ffffff; 
+	font-family: 'Work Sans', sans-serif; 
+    font-size:60px;
+}
+
+.home-text{
+    margin-left: 100px;
+}
+
+#main{
+    margin: 70px 22%;
+}
+#main h2{
+    font-size: 50px;
+    color: #2D3742; 
+    margin: 50px 0;
+    font-family: "Work sans", sans-serif;
+}
+#main p{
+    font-size: 24px;
+    font-family: "Work sans", sans-serif;
+}
+#main form{
+    max-width: 100%;
+    width: 100%;
+    margin: 50px auto;
+    position: relative;
+}
+#main form input{
+    display: inline-block;
+	font-family: 'Work Sans', sans-serif; 
+    font-size: 18px;
+    background-color: #EDF0FA;
+    width: 100%;
+    padding: 16px 24px;
+    box-shadow: 5px 10px 30px rgb(85 85 85 / 20%);
+    outline: none;
+    border: none;
+    border-radius: 16px;
+    margin-bottom: 20px;
+}
+#main form input:last-child{
+    background: #0095D9;
+    color : #ffffff;
+    cursor: pointer;
+}
+.mensualite{
+    display: flex ;
+    justify-content: center; 
+    max-width : 100%; 
+    margin: 0 auto;  
+    position: relative;    
+}
+.mensualite p{
+    font-family: 'Work Sans', sans-serif; 
+    font-size: 18px;
+    width: 100%;
+    margin : 0 auto;
+    padding: 16px 24px;
+    box-shadow: 5px 10px 30px rgb(85 85 85 / 20%);
+    outline: none;
+    border: none;
+    border-radius: 16px;
+    background-color: rgb(237, 203, 45);
+    color : #ffffff;
+}
+.ruban{
+    width: 100%;
+    height: 100px; 
+    background-color: #EDF0FA;
+}
+.assistance{
+    margin : 70px 10%;
+    display:flex; 
+    flex-wrap: wrap;
+    align-items: center;
+}
+.assist{
+    margin: 10px 20px;
+    width : calc(50% - 20px);
+}
+.assist h2{
+    font-family: 'Work Sans', sans-serif; 
+    padding: 5px;
+    margin: 10px;
+    color: #2D3742;
+}
+.assist p{
+    padding: 5px; 
+    margin: 10px; 
+    font-size: 20px;
+}
+.assist input{
+    display: inline-block;
+	font-family: 'Work Sans', sans-serif; 
+    font-size: 18px;
+    background-color: #EDF0FA;
+    width: 100%;
+    padding: 20px 30px;
+    box-shadow: 5px 10px 30px rgb(85 85 85 / 20%);
+    outline: none;
+    border: none;
+    border-radius: 16px;
+    margin: 10px;
+}
+.assist button{
+    display: inline-block;
+	font-family: 'Work Sans', sans-serif; 
+    font-size: 18px;
+    background-color: #EDF0FA;
+    width: 200px;
+    padding: 15px 20px;
+    box-shadow: 5px 10px 30px rgb(85 85 85 / 20%);
+    outline: none;
+    border: none;
+    border-radius: 16px;
+    margin: 10px;
+    background: #0095D9;
+    color : #ffffff;
+    cursor: pointer;
+}
+.footer{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, auto));
+    grid-gap: 2rem;
+	margin-top: 30px; 
+    background-color: #2D3742;
+}
+
+.list, .futurebank{
+	font-family: 'Work Sans', sans-serif; 
+	width: auto;
+    margin: 30px 20px;
+}
+
+.list h4{
+	font-family: 'Work Sans', sans-serif; 
+	font-size: 24px;
+	color: #FFFFFF;
+	margin-bottom: 30px;
+	position: relative;
+}
+.futurebank h4{
+    font-family: 'Work Sans', sans-serif; 
+	font-size: 24px;
+	color: #D6B031;
+	margin-bottom: 30px;
+	position: relative;
+}
+.list li {
+    margin: 8px 0; 
+    color: #ffffff; 
+}
+.futurebank p{
+    color: #ffffff; 
+    font-size: 16px; 
+}
+.social a{
+	height: 40px;
+	width: 40px;
+	background: #FFFFFF;
+	color: var(--main-color);
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 21px;
+	border-radius: 15px;
+	transition: .3s;
+	margin-right: 10px;
+}
+.list-social a:hover{
+	transform: scale(1.1);
+}
 @media (max-width:600px){
     header{
         padding: 0 10px;
     }
-    a{
+    .home-pret{
+        height: 40vh;
+    }
+    .nav a{
         color: #2D394B;
     }
     header ul{
@@ -87,6 +280,24 @@ header button{
     header button{
         display: none;
     }
+    .home-text h1{
+        font-size: 32px;
+    }
+    .home-text {
+        margin-left: 30px; 
+        text-align: left; 
+    }
+    .home-pret {
+        height: 85vh; 
+        background-size: cover;
+        background-position: center;
+    }
+    #main h2{
+        font-size: 32px;
+    }
+    #main p{
+        font-size: 16px;
+    }
     #burger{
         position: absolute;
         right: 30px;
@@ -96,137 +307,11 @@ header button{
     .nav :last-child a{
         display: block;
     }
-}
-/* end nav  */
-.home-pret{
-    position: relative;
-	width: 100%;
-	height: 100vh;
-    background: url(../images/pret-entete.png);
-	background-size: cover;
-	background-position: center;
-    background-repeat: no-repeat;
-    display: grid;
-	grid-template-columns: repeat(1, 1fr);
-	align-items: center;
-}
+    .list li{ 
+        color: #ffffff; 
+    }
+    .assist{
+        width : calc(100% - 20px);
 
-.home-text h1{
-	color:#ffffff; 
-	font-size : 80px;
-	font-family: 'Poppins', sans-serif; 
-}
-
-.home-text{
-    margin-left: 100px;
-}
-
-#main{
-    margin: 70px 22%;
-}
-#main h2{
-    font-size: 50px;
-    color: #2D3742; 
-    margin: 50px 0;
-    font-family: "Work sans", sans-serif;
-}
-#main p{
-    font-size: 24px;
-    font-family: "Work sans", sans-serif;
-}
-#main form{
-    max-width: 100%;
-    width: 80%;
-    margin: 50px auto;
-    position: relative;
-}
-#main form input{
-    display: inline-block;
-	font-family: 'Work Sans', sans-serif; 
-    font-size: 24px;
-    background-color: #EDF0FA;
-    width: 100%;
-    padding: 20px 30px;
-    box-shadow: 5px 10px 30px rgb(85 85 85 / 20%);
-    outline: none;
-    border: none;
-    border-radius: 16px;
-    margin-bottom: 30px;
-}
-#main form input:last-child{
-    background: #0095D9;
-    color : #ffffff;
-    cursor: pointer;
-}
-.mensualite{
-    display: flex ;
-    justify-content: center; 
-    max-width : 100%; 
-    margin: 0 auto;  
-    position: relative;    
-}
-.mensualite p{
-    font-family: 'Work Sans', sans-serif; 
-    font-size: 24px;
-    width: 80%;
-    margin : 0 auto;
-    padding: 20px 30px;
-    box-shadow: 5px 10px 30px rgb(85 85 85 / 20%);
-    outline: none;
-    border: none;
-    border-radius: 16px;
-    background-color: rgb(237, 203, 45);
-    color : #ffffff;
-}
-.ruban{
-    width: 100%;
-    height: 100px; 
-    background-color: #EDF0FA;
-}
-.assistance{
-    margin : 70px 15%;
-    display: flex; 
-}
-.assist{
-    margin: 10px 50px;
-}
-.assist h2{
-    font-family: 'Work Sans', sans-serif; 
-    padding: 5px;
-    margin: 10px;
-    color: #2D3742;
-}
-.assist p{
-    padding: 5px; 
-    margin: 10px; 
-    font-size: 20px;
-}
-.assist input{
-    display: inline-block;
-	font-family: 'Work Sans', sans-serif; 
-    font-size: 24px;
-    background-color: #EDF0FA;
-    width: 100%;
-    padding: 20px 30px;
-    box-shadow: 5px 10px 30px rgb(85 85 85 / 20%);
-    outline: none;
-    border: none;
-    border-radius: 16px;
-    margin: 10px;
-}
-.assist button{
-    display: inline-block;
-	font-family: 'Work Sans', sans-serif; 
-    font-size: 24px;
-    background-color: #EDF0FA;
-    width: 40%;
-    padding: 20px 30px;
-    box-shadow: 5px 10px 30px rgb(85 85 85 / 20%);
-    outline: none;
-    border: none;
-    border-radius: 16px;
-    margin: 10px;
-    background: #0095D9;
-    color : #ffffff;
-    cursor: pointer;
+    }
 }
