--- a/css/Contact.css
+++ b/css/Contact.css
@@ -16,7 +16,7 @@ body{
   font-family: "Work Sans", sans-serif;
   color: #000000;
   background: white;
-  padding-bottom: 5em;
+  /* padding-bottom: 5em; */
 }
 
 /* start nav */
@@ -73,7 +73,7 @@ header button{
     header{
         padding: 0 10px;
     }
-    a{
+    nav a{
         color: #2D394B;
     }
     header ul{
@@ -451,4 +451,70 @@ form{
     font-size: 0.9rem;
     margin: 1.5em 0;
   }
+}
+
+/***********************/
+.footer{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, auto));
+  grid-gap: 2rem;
+  margin-top: 30px; 
+  background-color: #2D3742;
+}
+
+.list, .futurebank{
+  font-family: 'Work Sans', sans-serif; 
+  width: auto;
+  margin: 30px 20px;
+}
+
+.list h4{
+  font-family: 'Work Sans', sans-serif; 
+  font-size: 24px;
+  color: #FFFFFF;
+  margin-bottom: 30px;
+  position: relative;
+}
+.futurebank h4{
+  font-family: 'Work Sans', sans-serif; 
+  font-size: 24px;
+  color: #D6B031;
+  margin-bottom: 30px;
+  position: relative;
+}
+.list li {
+  margin: 8px 0; 
+  color: #ffffff; 
+}
+.futurebank p{
+  color: #ffffff; 
+  font-size: 16px; 
+}
+.social a{
+  height: 40px;
+  width: 40px;
+  background: #FFFFFF;
+  color: var(--main-color);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 21px;
+  border-radius: 15px;
+  transition: .3s;
+  margin-right: 10px;
+}
+.list-social a:hover{
+  transform: scale(1.1);
+}
+.ruban2{
+  width: 100%;
+  height: 70px; 
+  background-color: #EDF0FA;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.ruban2 h3{
+  font-family: 'Work Sans', sans-serif;
+  color: #2D394B;
 }
