--- a/css/Pret.css
+++ b/css/Pret.css
@@ -120,13 +120,6 @@ header button{
     cursor: pointer;
 }
 .mensualite{
-    display: flex ;
-    justify-content: center; 
-    max-width : 100%; 
-    margin: 0 auto;  
-    position: relative;    
-}
-.mensualite p{
     font-family: 'Work Sans', sans-serif; 
     font-size: 18px;
     width: 100%;
@@ -138,7 +131,10 @@ header button{
     border-radius: 16px;
     background-color: rgb(237, 203, 45);
     color : #ffffff;
+    display: flex;
+    justify-content: space-between; 
 }
+
 .ruban{
     width: 100%;
     height: 100px; 
@@ -149,6 +145,7 @@ header button{
     display:flex; 
     flex-wrap: wrap;
     align-items: center;
+    justify-content: center;
 }
 .assist{
     margin: 10px 20px;
@@ -245,6 +242,18 @@ header button{
 }
 .list-social a:hover{
 	transform: scale(1.1);
+}
+.ruban2{
+    width: 100%;
+    height: 70px; 
+    background-color: #EDF0FA;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.ruban2 h3{
+    font-family: 'Work Sans', sans-serif;
+    color: #2D394B;
 }
 @media (max-width:600px){
     header{
