--- a/css/Apropos.css
+++ b/css/Apropos.css
@@ -97,3 +97,379 @@ header button{
     }
 }
 /* end nav  */
+
+.head{
+    width: 100%;
+    height: 600px;
+    background-image: url(../images/images-Apropos/apropos.png);
+    background-size: cover;
+    background-position: center;
+    padding: 200px 0;
+}
+.hello{
+    padding: 20px 100px 0;
+}
+.hello h4{
+    font-family: "Work Sans", sans-serif;
+    font-size: 65px;
+    font-weight: 400;
+    color: #2D3742;
+}
+.hello h2{
+    font-family: "Work Sans", sans-serif;
+    font-size: 70px;
+    font-weight: 700;
+    color: #2D3742;
+}
+
+.p1{
+    text-align: center;
+    margin: 50px 60px;
+    padding: 0 40px;
+}
+.p1 h2{
+    font-family: "Work Sans", sans-serif;
+    font-size: 35px;
+    font-weight: 600;
+    color: #3C3C3C;
+    padding-top: 20px;
+}
+.p1 p{
+    font-family: "Work Sans", sans-serif;
+    color: #3C3C3C;
+    text-align: justify;
+    font-weight: 450;
+    font-size: 30px;
+    padding-top: 40px;
+}
+.p1 h4{
+    font-family: "Work Sans", sans-serif;
+    color: #D6B031;
+    font-size: 35px;
+    font-weight: 550;
+    text-align: start;
+    padding: 40px 0;
+}
+.stick{
+    display: inline;
+}
+.stick img{
+    padding: 10px 30px;
+}
+.stickers ul li{
+    font-family: "Work Sans", sans-serif;
+    display: inline;
+    padding: 10px 40px;
+    font-weight:bold;
+    font-size: 15px;
+}
+
+
+hr{
+    width: 100%;
+    margin: 40px 0;
+    padding: 35px 0;
+    border: 1px;
+    background-color: #EDF0FA;
+}
+
+.p2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 80px 60px;
+    gap: 120px;
+}
+.p2 img{
+    width: 33%;
+}
+.Engagement h2{
+    font-family: "Work Sans", sans-serif;
+    color: #D6B031;
+    font-size: 25px;
+    font-weight: 600;
+    text-align: start;
+    padding: 20px 0;
+}
+
+.Engagement p{
+    font-family: "Work Sans", sans-serif;
+    color: #484B50;
+    text-align: justify;
+    font-weight: 550;
+    font-size: 18px;
+}
+
+.p3{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 80px 60px;
+    gap: 120px;
+}
+.p3 img{
+    width: 26%;
+}
+.Innovation h2{
+    font-family: "Work Sans", sans-serif;
+    color: #D6B031;
+    font-size: 25px;
+    font-weight: 600;
+    text-align: start;
+    padding: 20px 0;
+}
+.Innovation p{
+    font-family: "Work Sans", sans-serif;
+    color: #484B50;
+    text-align: justify;
+    font-weight: 550;
+    font-size: 18px;
+}
+.p4{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 80px 60px;
+    gap: 120px;
+}
+.p4 img{
+    width: 28%;
+}
+.Confiance h2{
+    font-family: "Work Sans", sans-serif;
+    color: #D6B031;
+    font-size: 25px;
+    font-weight: 600;
+    text-align: start;
+    padding: 20px 0;
+}
+.Confiance p{
+    font-family: "Work Sans", sans-serif;
+    color: #484B50;
+    text-align: justify;
+    font-weight: 550;
+    font-size: 18px;
+}
+.p5{
+    text-align: center;
+    gap: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.p5 h2{
+    display: flex;
+    justify-content: center;
+    font-family: "Work Sans", sans-serif;
+    color: #3C3C3C;
+    font-size: 25px;
+    font-weight: 600;
+    text-align: start;
+    padding: 20px 0 5px;
+}
+.p5 p{
+    font-family: "Work Sans", sans-serif;
+    color: #484B50;
+    text-align: justify;
+    font-weight: 550;
+    font-size: 18px;
+    padding: 20px 20px;
+}
+.slide1 h2{
+    font-family: "Work Sans", sans-serif;
+    color: #3C3C3C;
+    font-size: 25px;
+    font-weight: 600;
+    padding: 10px 0;
+}
+.slide1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border:10px solid #2D3742;
+    padding: 10px 20px;
+    border-radius: 0 120px 0 80px;
+    outline:4px solid #D6B031;
+}
+.slide1 img{
+    
+}
+
+
+
+
+
+.elm-slide ul li{
+    font-family: "Work Sans", sans-serif;
+    display: inline-block;
+    font-weight:bold;
+}
+.static1 li{
+    color: #D6B031;
+    padding: 0 80px;
+    font-weight: 200px;
+    font-size: xx-large;
+    margin: 40px 0 0;
+}
+.static2 li{
+    color: #2D3742;
+    padding: 0 45px;
+    font-weight:bold;
+    font-size: large;
+}
+
+
+
+
+
+
+/* .p6{
+    text-align: center;
+    margin: 80px 60px;
+    gap: 120px;
+} */
+.p6 h2{
+    display: flex;
+    justify-content: center;
+    font-family: "Work Sans", sans-serif;
+    color: #3C3C3C;
+    font-size: 25px;
+    font-weight: 600;
+    text-align: start;
+    padding: 20px 0;
+}
+.p6 p{
+    display: flex;
+    justify-content: center;
+    font-family: "Work Sans", sans-serif;
+    color: #484B50;
+    text-align: justify;
+    font-weight: 550;
+    font-size: 18px;
+    padding: 30px;
+}
+
+
+.sponsor ul{
+    display: inline;
+    justify-content: center;
+    align-items: center;
+    padding: 0 80px;
+    margin: 40px 0 0;
+}
+
+.Partenaires{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.part1 img , .part2 img , .part3 img{
+    padding: 2px 8px 0 2px;
+    width: 180px;
+    height:280px;
+    border-radius: 0 0 40px;
+}
+.part1,.part2,.part3{
+    align-items: center;
+    justify-content: center;
+    text-align: justify;
+    background-color: #2D394B;
+    height: 480px;
+    width: 300px;
+    margin: 15px;
+    border: 8px solid #0095D9;
+    border-top: 0;
+    border-radius: 0 120px 0 80px;
+}
+.part2{
+    border: 8px solid  #D6B031;
+    border-top: 0;
+    border-radius: 0 120px 0 80px;
+}
+.info-part{
+    padding: 5px 25px;
+    font-family: "Work Sans", sans-serif;
+    color: #FFFFFF;
+}
+.part1 h3, .part2 h3, .part3 h3{
+    font-weight: 600;
+    font-size: x-large;
+}
+.part1 h5, .part2 h5, .part3 h5{
+    font-family: "Inter", sans-serif;
+    font-weight: 600;
+    font-size:;
+    color: #D6B031;
+    padding: 2px 0 7px;
+}
+.part1 p, .part2 p, .part3 p{
+    font-weight: 540;
+    font-size: 16px;
+}
+
+.sponsor{
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+}
+.sponsor img{
+    display: inline-flex;
+    padding: 0 20px;
+}
+
+
+
+/* footer */
+footer{
+    background-color: #2D394B;
+    margin: 10px 0 0 0 ;
+}
+.all{
+    display: flex;
+    padding:20px 20px;
+    color: #f5f5f5;
+    justify-content: center;
+    /* flex-wrap: wrap ; */
+}
+.c1 , .c2{
+    display: flex;
+}
+.Fdescription img{
+    width: 200px;
+    margin-bottom: 10px;
+}
+.Fdescription , .Explore , .Apropos , .social{
+    margin:0 40px;
+}
+.Fdescription p{
+    max-width: 200px;
+}
+.Explore h4 , .Apropos h5 , .social h6{
+    font-size: 23px;
+    margin-bottom: 10px;
+}
+.all li{
+    padding: 5px 0;
+}
+.socialLinks img{
+    padding: 0 10px 0 0;
+    width: 40px;
+}
+.Explore li , .Apropos li{
+    font-weight: 500;
+}
+.copyright{
+    background-color: #EDF0FA;
+}
+.copyright p{
+    color: #2D394B;
+    text-align: center;
+    padding: 20px 0;
+    font-weight: 700;
+}
+
