--- a/css/investisement.css
+++ b/css/investisement.css
@@ -5,6 +5,7 @@
     scroll-behavior: smooth;
     text-decoration: none;
     list-style: none;
+    font-family: "Poppins", sans-serif;
 }
 /* start nav */
 a{
@@ -55,6 +56,9 @@ header button{
 }
 .nav :last-child a{
     display: none;
+}
+.sticky{
+    background-color: #2D394B;
 }
 /* end nav  */
 /* section home */
@@ -114,7 +118,8 @@ header button{
     background-color: #f5f5f5;
     width: 400px;
     border-radius: 18px;
-    height: 520px;
+    height: 550px;
+    /* min-height: 400px; */
 }
 .card img{
     width: 402px;
@@ -122,11 +127,16 @@ header button{
 .card h3{
     text-align: center;
     font-size: 25px;
+    font-family: "Work Sans", sans-serif;
+}
+.size {
+    height: 300px;
 }
 .card p{
     max-width: 400px;
     text-align: justify;
     margin: 10px;
+    
 }
 .card div{
     display: flex;
@@ -288,10 +298,9 @@ footer{
         width: 30px;
         padding: 0 5px 0;
     }
-    .social svg{
-        width: 20px;
-        height: 20px;
-        /* padding: 0 5px 0; */
+    .socialLinks svg{
+       width: 20px;
+       height: 20px;
     }
 
 }
@@ -301,7 +310,7 @@ footer{
     }
 }
 /* tablet media query */
-@media (min-width:600px) and (max-width:1400px){
+@media (min-width:800px) and (max-width:1400px){
     .projects{
         grid-template-columns: repeat(2,auto);
         grid-template-rows: repeat(2,auto);
