--- a/css/investisement.css
+++ b/css/investisement.css
@@ -162,7 +162,8 @@ footer{
     margin: 10px 0 0 0 ;
 }
 .all{
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(200px , auto));
     padding:20px 20px;
     color: #f5f5f5;
     justify-content: center;
