--- a/css/Pret.css
+++ b/css/Pret.css
@@ -58,6 +58,8 @@ header button{
 }
 
 /* end nav  */
+
+/* Start Home section */
 .home-pret{
     position: relative;
 	width:100%;
@@ -82,6 +84,9 @@ header button{
     margin-left: 100px;
 }
 
+/* End home section */
+
+/* Start main section */
 #main{
     margin: 70px 22%;
 }
@@ -191,6 +196,10 @@ header button{
     color : #ffffff;
     cursor: pointer;
 }
+
+/* End Main section */
+
+/* start footer section */
 .footer{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(170px, auto));
@@ -256,6 +265,10 @@ header button{
     font-family: 'Work Sans', sans-serif;
     color: #2D394B;
 }
+
+/* End footer section */
+
+/* Media query pour les appareils mobile */
 @media (max-width:767px){
     header{
         padding: 0 10px;
@@ -325,3 +338,4 @@ header button{
 
     }
 }
+/* End media query */
