--- a/css/Pret.css
+++ b/css/Pret.css
@@ -203,70 +203,53 @@ header button{
 /* End Main section */
 
 /* start footer section */
-.footer{
+footer{
+    background-color: #2D394B;
+    margin: 10px 0 0 0 ;
+}
+.all{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(170px, auto));
-    grid-gap: 2rem;
-	margin-top: 30px; 
-    background-color: #2D3742;
-}
-
-.list, .futurebank{
-	font-family: 'Work Sans', sans-serif; 
-	width: auto;
-    margin: 16px 8px;
-    padding-left: 16px;
-}
-
-.list h4{
-	font-family: 'Work Sans', sans-serif; 
-	font-size: 20px;
-	color: #FFFFFF;
-	margin-bottom: 24px;
-	position: relative;
-}
-.futurebank h4{
-    font-family: 'Work Sans', sans-serif; 
-	font-size: 20px;
-	color: #D6B031;
-	margin-bottom: 24px;
-	position: relative;
-}
-.list li {
-    margin: 8px 0; 
-    color: #ffffff; 
-}
-.futurebank p{
-    color: #ffffff; 
-    font-size: 16px; 
-}
-.social a{
-	height: 40px;
-	width: 40px;
-	background: #FFFFFF;
-	color: var(--main-color);
-	display: inline-flex;
-	align-items: center;
-	justify-content: center;
-	font-size: 21px;
-	border-radius: 15px;
-	transition: .3s;
-	margin-right: 10px;
-}
-.list-social a:hover{
-	transform: scale(1.1);
-}
-.ruban2{
-    width: 100%;
-    height: 70px; 
-    background-color: #EDF0FA;
-    display: flex;
+    grid-template-columns: repeat(auto-fit,minmax(170px , auto));
+    padding:20px 20px;
+    color: #f5f5f5;
     justify-content: center;
-    align-items: center;
+    /* flex-wrap: wrap ; */
 }
-.ruban2 h3{
-    font-family: 'Work Sans', sans-serif;
+.c1 , .c2{
+    display: flex;
+}
+.Fdescription img{
+    width: 200px;
+    margin-bottom: 10px;
+}
+.Fdescription , .Explore , .Apropos , .social{
+    margin:0 40px;
+}
+.Fdescription p{
+    max-width: 200px;
+}
+.Explore h4 , .Apropos h5 , .social h6{
+    font-size: 23px;
+    margin-bottom: 10px;
+}
+.all li{
+    padding: 5px 0;
+}
+.socialLinks img{
+    padding: 0 10px 0 0;
+    width: 40px;
+}
+.Explore li , .Apropos li{
+    font-weight: 500;
+}
+.copyright{
+    background-color: #EDF0FA;
+}
+.copyright p{
     color: #2D394B;
+    text-align: center;
+    padding: 20px 0;
+    font-weight: 700;
 }
 
 /* End footer section */
@@ -339,6 +322,37 @@ header button{
     .assist{
         width : calc(100% - 20px);
 
+    }
+    .all{
+        flex-direction: column;
+    }
+    .Fdescription , .Explore , .Apropos , .social{
+        margin: 0 ;
+    }
+    .Fdescription img{
+        width: 140px;
+    }
+    .social h6 , .Explore h4, .Apropos h5{
+        font-size: 18px;
+    }
+    .social {
+        margin-top: 10px;
+    }
+    .c2 .Apropos{
+        margin-right: 60px;
+    }
+    .social img {
+        width: 30px;
+        padding: 0 5px 0;
+    }
+    .socialLinks svg{   
+       width: 20px;
+       height: 20px;
+    }
+}
+@media (max-width:800px){
+    .Fdescription img{
+        width: 140px;
     }
 }
 /* End media query */
