--- a/css/styles.css
+++ b/css/styles.css
@@ -462,112 +462,60 @@ header button{
 .sticky{
     background-color: #2D394B;
 }
-@media (max-width:800px){
-    header{
-        padding: 0 10px;
-    }
-   .nav a{
-        color: #2D394B;
-    }
-    header ul{
-        flex-direction: column;
-        position: absolute;
-        top:60px;
-        right: 30px;
-        background-color: rgba(255, 255, 255,0.9);
-        padding: 10px ;
-        border-radius: 15px;
-        visibility:hidden;
-    }
-    header ul li::after{
-        content: "";
-        width: 20px;
-        height: 3px;
-        margin: 2px 0 0 0 ;
-        background-color: #D6B031;
-        display: block;
-    }
-    header ul li {
-        margin: 2px 0;
-    }
-    header button{
-        display: none;
-    }
-    #burger{
-        position: absolute;
-        right: 30px;
-        display: block;
-        color: #f5f5f5; 
-    }
-    .nav :last-child a{
-        display: block;
-    }
-}
+/* @media (max-width:800px){
+   
+} */
 
 /******************  footer *******************/
-.footer{
+footer{
+    background-color: #2D394B;
+    margin: 10px 0 0 0 ;
+    width: 98%;
+}
+.all{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, auto));
-    grid-gap: 2rem;
-    margin-top: 30px; 
-    background-color: #2D3742;
-}
-
-.list, .futurebank{
-    font-family: 'Work Sans', sans-serif; 
-    width: auto;
-    margin: 30px 20px;
-}
-
-.list h4{
-    font-family: 'Work Sans', sans-serif; 
-    font-size: 24px;
-    color: #FFFFFF;
-    margin-bottom: 30px;
-    position: relative;
-}
-.futurebank h4{
-    font-family: 'Work Sans', sans-serif; 
-    font-size: 24px;
-    color: #D6B031;
-    margin-bottom: 30px;
-    position: relative;
-}
-.list li {
-    margin: 8px 0; 
-    color: #ffffff; 
-}
-.futurebank p{
-    color: #ffffff; 
-    font-size: 16px; 
-}
-.social a{
-    height: 40px;
-    width: 40px;
-    background: #FFFFFF;
-    color: var(--main-color);
-    display: inline-flex;
-    align-items: center;
+    grid-template-columns: repeat(auto-fit,minmax(170px , auto));
+    padding:20px 20px;
+    color: #f5f5f5;
     justify-content: center;
-    font-size: 21px;
-    border-radius: 15px;
-    transition: .3s;
-    margin-right: 10px;
+    /* flex-wrap: wrap ; */
 }
-.list-social a:hover{
-    transform: scale(1.1);
-}
-.ruban2{
-    width: 100%;
-    height: 70px; 
-    background-color: #EDF0FA;
+.c1 , .c2{
     display: flex;
-    justify-content: center;
-    align-items: center;
 }
-.ruban2 h3{
-    font-family: 'Work Sans', sans-serif;
+.Fdescription img{
+    width: 200px;
+    margin-bottom: 10px;
+}
+.Fdescription , .Explore , .Apropos , .social{
+    margin:0 40px;
+}
+.Fdescription p{
+    max-width: 140px;
+    margin: 0;
+}
+.Explore h4 , .Apropos h5 , .social h6{
+    font-size: 23px;
+    margin-bottom: 10px;
+}
+.all li{
+    padding: 5px 0;
+}
+.socialLinks img{
+    padding: 0 10px 0 0;
+    width: 40px;
+}
+.Explore li , .Apropos li{
+    font-weight: 500;
+}
+.copyright{
+    background-color: #EDF0FA;
+}
+.copyright p{
     color: #2D394B;
+    text-align: center;
+    padding: 20px 0;
+    font-weight: 700;
 }
 
 
@@ -614,6 +562,11 @@ header button{
     margin-left: 100px;
 
   }
+  @media (max-width:400px){
+    .copyright p{
+        font-size: 14px;
+    }
+  }
   
   @media (max-width: 800px) {
  
@@ -633,5 +586,80 @@ header button{
         background-size: cover;
         background-position: center;
     }
+    .all{
+        flex-direction: column;
+    }
+    .Fdescription , .Explore , .Apropos , .social{
+        margin: 0 ;
+    }
+    .Fdescription img{
+        width: 130px;
+    }
+    .social h6 , .Explore h4, .Apropos h5{
+        font-size: 18px;
+    }
+    .social {
+        margin-top: 10px;
+    }
+    .c2 .Apropos{
+        margin-right: 60px;
+    }
+    .social img {
+        width: 30px;
+        padding: 0 5px 0;
+    }
+    .socialLinks svg{   
+       width: 20px;
+       height: 20px;
+    }
+    header{
+        padding: 0 10px;
+    }
+   .nav a{
+        color: #2D394B;
+    }
+    header ul{
+        flex-direction: column;
+        position: absolute;
+        top:60px;
+        right: 30px;
+        background-color: rgba(255, 255, 255,0.9);
+        padding: 10px ;
+        border-radius: 15px;
+        visibility:hidden;
+    }
+    header ul li::after{
+        content: "";
+        width: 20px;
+        height: 3px;
+        margin: 2px 0 0 0 ;
+        background-color: #D6B031;
+        display: block;
+    }
+    header ul li {
+        margin: 2px 0;
+    }
+    header button{
+        display: none;
+    }
+    #burger{
+        position: absolute;
+        right: 30px;
+        display: block;
+        color: #f5f5f5; 
+    }
+    .nav :last-child a{
+        display: block;
+    }
   
+  }
+  @media (min-width:800px){
+    .Fdescription img{
+        width: 130px;
+    }
+  }
+  @media (min-width:1024px){
+    footer{
+        width: 98%;
+    }
   }
