--- a/css/Apropos.css
+++ b/css/Apropos.css
@@ -5,6 +5,7 @@
     scroll-behavior: smooth;
     text-decoration: none;
     list-style: none;
+    font-family: "Poppins", serif;
 }
 /* start nav */
 a{
