--- a/css/Apropos.css
+++ b/css/Apropos.css
@@ -57,6 +57,9 @@ header button{
 .nav :last-child a{
     display: none;
 }
+.sticky {
+    background-color: #2D394B;
+}
 @media (max-width:800px){
     header{
         padding: 0 10px;
