--- a/css/investisement.css
+++ b/css/investisement.css
@@ -66,7 +66,7 @@ header button {
 .nav :last-child a {
     display: none;
 }
-
+/* pour le scroll de window doit colore la barre menu */
 .sticky {
     background-color: #2D394B;
 }
